# codex-clean

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: app.rs  cleanup.rs  main.rs  model.rs  scan.rs  ui.rs
