[package]
name = "codex-clean"
version = "0.1.0"
edition = "2021"
description = "A TUI tool for visualizing and cleaning up Codex worktrees"
license = "MIT"
readme = "README.md"
keywords = ["codex", "worktree", "tui", "cleanup"]
categories = ["command-line-utilities"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
anyhow = "1"
rayon = "1"

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
lto = true
codegen-units = 1
